Fix spacing and add form reset button

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -23,14 +23,15 @@
     height: 100%;
     overflow: auto;
     background-color: var(--lighter);
-    padding-top: 25px;
+    /* padding-top: 25px; */
     padding-bottom: 25px;
 }
 
 .subtitle{
     color: var(--darkest);
     font-weight: 600;
-    font-size: larger;
+    font-size: x-large;
+    margin-top: 25px;
 }
 
 .form, .edu-form, .exp-form{
