--- a/src/styles/rendercv.css
+++ b/src/styles/rendercv.css
@@ -24,6 +24,7 @@
 
 .cv-subtitle{
     font-weight: 600;
+    font-size: 1.25rem;
     background-color: rgb(204, 204, 204);
     margin-top: 20px;
 }
